@@ -1,0 +1,2 @@
+prog: deep_badparam
+vgopts: -q
